<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:scrollbarSize="8dp"
    tools:context=".Register">

    <include
        android:id="@+id/titlebarregister"
        layout="@layout/app_titlebar"></include>

    <ScrollView
        android:id="@+id/scrollView"
        style="@android:style/Widget.Holo.Light.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="631dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:clipToPadding="true"
        android:fadeScrollbars="false"
        android:fillViewport="true"
        android:scrollbarSize="8dp"
        android:scrollbarStyle="insideInset"
        android:scrollbarThumbVertical="@android:drawable/editbox_dropdown_light_frame"
        android:scrollbarTrackVertical="@android:drawable/dark_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivpicture"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="50dp"
                    android:layout_weight="1"
                    android:background="@android:color/black"
                    android:onClick="TakePicture"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profilepicture" />

                <TextView
                    android:id="@+id/tvinfopic"
                    android:layout_width="0dp"
                    android:layout_height="23dp"
                    android:layout_marginTop="115dp"
                    android:layout_weight="1"
                    android:text="@string/tvpicture"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/etregemail"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:autoText="false"
                android:backgroundTint="@android:color/white"
                android:backgroundTintMode="src_atop"
                android:ems="10"
                android:hint="@string/etemail"
                android:inputType="textEmailAddress"
                android:singleLine="false"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etregpassword"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@android:color/white"
                android:ems="10"
                android:hint="@string/etpassword"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <TextView
                android:id="@+id/tvinfopass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:textColor="@android:color/holo_red_light" />

            <EditText
                android:id="@+id/etregconfirmpassword"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:backgroundTint="@android:color/white"
                android:ems="10"
                android:hint="@string/etconfirmpassword"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <TextView
                android:id="@+id/tvinfoconfirpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:textColor="@android:color/holo_red_light" />

            <EditText
                android:id="@+id/etusername"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:backgroundTint="@android:color/white"
                android:ems="10"
                android:hint="@string/etusername"
                android:inputType="textPersonName"
                android:password="false"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/etbio"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@android:color/white"
                android:ems="10"
                android:hint="@string/etbio"
                android:inputType="textPersonName"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <Button
                android:id="@+id/btregsignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="20dp"
                android:onClick="SIGNUP"
                android:text="@string/btsignup" />


        </LinearLayout>
    </ScrollView>



</RelativeLayout>

